--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Bharani | Portfolio</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
 
 </head>
 <body>
@@ -38,7 +39,7 @@
   </section>
 
   <!-- About Section -->
-  <section id="about" class="fade-in">
+  <section id="about" data-aos="fade-right">
     <h2>About Me</h2>
     <div class="about-container">
       <img src="images/PS photo .jpg" alt="Bharani Profile Photo" class="profile-pic">
@@ -54,7 +55,7 @@
   </section>
 
   <!-- Skills Section -->
-  <section id="skills" class="fade-in">
+  <section id="skills" data-aos="zoom-in">
   <h2>My Skills</h2>
   <div class="skills-grid">
     <div class="skill-card"><i class="fa-brands fa-html5"></i> HTML / CSS</div>
@@ -67,7 +68,7 @@
 
 
   <!-- Projects Section -->
-  <section id="projects" class="fade-in">
+  <section id="projects" data-aos="fade-up">
   <h2>Projects</h2>
   <div class="project-grid">
    <div class="project-card">
@@ -85,7 +86,7 @@
 
 
   <!-- Contact Section -->
-  <section id="contact" class="fade-in">
+  <section id="contact" data-aos="fade-left">
   <h2>Contact Me</h2>
   <div class="contact-icons">
     <a href="mailto:bharanidharank1806@gmail.com" target="_blank">
@@ -110,5 +111,14 @@
   </footer>
 
   <script src="script.js"></script>
+  <!--scroll animation-->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init({
+    duration: 1000, // animation duration
+    once: true      // only animate once
+  });
+</script>
+
 </body>
 </html>
