--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <header>
   <nav class="navbar">
     <div class="logo">
-      <i class="fa-solid fa-code"></i> Bharani<span>.</span>
+      
+
+      Bharani<span>.</span>
     </div>
     <ul class="nav-links" id="navLinks">
       <li><a href="#home">Home</a></li>
