--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
   <nav class="navbar">
     <div class="logo">
       
-
-      Bharani<span>.</span>
+      <div>Bharani</div><span>.</span>
     </div>
     <ul class="nav-links" id="navLinks">
       <li><a href="#home">Home</a></li>
@@ -51,7 +50,7 @@
         <p>Looking for an entry-level software developer position where I can leverage
         my skills and enthusiasm to contribute to impactful projects and grow as part
         of a forward-thinking team.</p>
-        <a href="Bharani_resume.pdf" download class="btn">Download Resume</a>
+        <a href="Resume/BharaniDharan.pdf" download class="btn">Download Resume</a>
       </div>
     </div>
   </section>
@@ -79,10 +78,27 @@
     <p>Developed with Spring Boot, Java, and MySQL. Features CRUD operations for clients,
     products, and invoice records with REST APIs.</p>
     <div class="project-links">
-    <a href="https://github.com/Bharanidharan21" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+    <a href="https://github.com/Bharanidharan21/Invoice-Generator" target="_blank"><i class="fab fa-github"></i> GitHub</a>
     <a href="#" target="_blank"><i class="fa-solid fa-up-right-from-square"></i> Live Demo</a>
     </div>
    </div>
+   <div class="project-card">
+  <img src="images/currency-converter.jpg" alt="Currency Converter Project">
+  <h3>Currency Converter Application</h3>
+  <p>
+    A web-based currency converter that allows users to convert amounts between
+    different currencies using real-time exchange rates.
+  </p>
+  <div class="project-links">
+    <a href="https://github.com/Bharanidharan21/Currency-Convertor" target="_blank">
+      <i class="fab fa-github"></i> GitHub
+    </a>
+    <a href="#" target="_blank">
+      <i class="fa-solid fa-up-right-from-square"></i> Live Demo
+    </a>
+  </div>
+</div>
+
   </div>
   </section>
 
