--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <p>Looking for an entry-level software developer position where I can leverage
         my skills and enthusiasm to contribute to impactful projects and grow as part
         of a forward-thinking team.</p>
-        <a href="Resume/BharaniDharan.pdf" download class="btn">Download Resume</a>
+        <a href="Resume/Bharanidharan_Resume.pdf" download class="btn">Download Resume</a>
       </div>
     </div>
   </section>
